# getoffice-drone

./: .gitignore  pyproject.toml  vercel.json
api/: app.py  main.py  router.py
api/core/: context.py  notion.py
api/templates/partials/: footer.html
api/utils/: html.py  json.py  notion.py
core/: context.py  settings.py
src/: app.py
src/api/: router.py
src/core/: delta.py
src/templates/partials/: header.html
src/utils/: notion.py  produtos.py
templates/: report.html  script.html  styles.css
utils/: html.py  json.py  notion.py
