[project]
name = "getoffice-drone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "notion-client>=2.7.0",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "fastapi[standard]>=0.128.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "openai>=2.15.0",
    "ruff>=0.14.10",
]
test = ["pytest>=9.0.2", "pytest-cov>=7.0.0"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
exclude = ["**/build/**", "**/.venv/**", "**/__pycache__/**"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
exclude = ["*.pyi", "*.ipynb"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B"]
